{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 2131,
  "lineage": "d571921a-cc9e-ec6d-23a3-8dbd08731b3b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:223363613223:vpc/vpc-0eb89abc55a15bbe0",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0e39ba5337d1b083a",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0d1a0abd045557039",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0eb89abc55a15bbe0",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0edac3bbe645af826",
            "ipv6_cidr_block": "2600:1f1c:c77:6200::/56",
            "main_route_table_id": "rtb-09006be4cb8410948",
            "owner_id": "223363613223",
            "tags": {
              "Environment": "dev",
              "Name": "DWP-CV-dev",
              "Owner": "user",
              "Tier": "dwp_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:223363613223:security-group/sg-0fbbf514f32abad43",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fbbf514f32abad43",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20220318115311849600000009",
            "name_prefix": "all_worker_management",
            "owner_id": "223363613223",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb89abc55a15bbe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:223363613223:security-group/sg-0717d8170fdb87c52",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0717d8170fdb87c52",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20220318115311843800000003",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "223363613223",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb89abc55a15bbe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:223363613223:security-group/sg-0d863e8bc5b0c8cfe",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0d863e8bc5b0c8cfe",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20220318115311843100000002",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "223363613223",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb89abc55a15bbe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:223363613223:security-group/sg-07d85a6f6a62cb383",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-07d85a6f6a62cb383",
            "ingress": [],
            "name": "DWP-CV-dev-3D9Nfn8e20220318115311845100000005",
            "name_prefix": "DWP-CV-dev-3D9Nfn8e",
            "owner_id": "223363613223",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DWP-CV-dev-3D9Nfn8e-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "DWP-CV-dev-3D9Nfn8e-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb89abc55a15bbe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:223363613223:security-group/sg-0842d8788703773a1",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0842d8788703773a1",
            "ingress": [],
            "name": "DWP-CV-dev-3D9Nfn8e20220318115311844200000004",
            "name_prefix": "DWP-CV-dev-3D9Nfn8e",
            "owner_id": "223363613223",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DWP-CV-dev-3D9Nfn8e-eks_worker_sg",
              "kubernetes.io/cluster/DWP-CV-dev-3D9Nfn8e": "owned"
            },
            "tags_all": {
              "Name": "DWP-CV-dev-3D9Nfn8e-eks_worker_sg",
              "kubernetes.io/cluster/DWP-CV-dev-3D9Nfn8e": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb89abc55a15bbe0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-855089958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07d85a6f6a62cb383",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc",
            "module.eks.aws_security_group.cluster",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3539609429",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-07d85a6f6a62cb383",
            "self": false,
            "source_security_group_id": "sg-0842d8788703773a1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-4056851388",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0842d8788703773a1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc",
            "module.eks.aws_security_group.workers",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-2096878766",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0842d8788703773a1",
            "self": false,
            "source_security_group_id": "sg-07d85a6f6a62cb383",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1284946614",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0842d8788703773a1",
            "self": false,
            "source_security_group_id": "sg-07d85a6f6a62cb383",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-669636134",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0842d8788703773a1",
            "self": false,
            "source_security_group_id": "sg-0842d8788703773a1",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.cluster_vpc",
            "module.eks.aws_security_group.workers",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}